Renamed files, redacted README.md, many other changes